2022-04-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-wconfig.el: new file.

2022-04-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-pdftotext-page): define it explicitly.

	* eepitch.el (eepitch-eshell3): new function.

2022-04-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-find-psne-echo-options): new function.
	(find-psne-links, ee-find-psne-core): added the argument
	`echo-options'.

	* eev-intro.el (find-windows-beginner-intro): added the section
	"5.6.1. Echo in Eshell".

2022-04-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-code-c-d-base): added some links to the
	template.

	* eev-hlinks.el (ee-nov-bufferp): new function.
	(ee-fhl-main-program): added support for nov.el.

	* eev-tlinks.el (find-nov-links, ee-find-nov-links, find-nov): new
	functions.

2022-04-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): rewrote the template.

2022-04-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newpdfviewer-links): new function.

	* eev-pdflike.el (find-okular-page, ee-find-okular-page-options)
	(ee-find-okular-page): new functions.
	(ee-code-pdfbackend): rewrote the comments in the template.

2022-04-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-osm-lat): use `osm--lat' instead of `(osm--lat)'.
	(ee-osm-lon): use `osm--lon' instead of `(osm--lon)'.

2022-03-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-pip3-links): new function.
	(find-yttranscript-links): new function.
	(find-youtubedl-links): use `find-yttranscript-links'.

2022-03-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): new function (inspired by
	a chat with Quiliro Ordoñez).

2022-03-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (ee-url-at-point): new function.

2022-03-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-osm-str): new function.
